cmake_minimum_required(VERSION 3.21)
project (OOP_revision)

set(CMAKE_CXX_STANDARD 14)

add_executable(OOP_revision main.cpp Elementalist.cpp Elementalist.h Magic.cpp Magic.h Potion.cpp Potion.h Spell.cpp Spell.h Spellswords.cpp Spellswords.h Transformation.cpp Transformation.h Wizard.cpp Wizard.h)
